--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -1156,7 +1156,9 @@
 .skill-card {
   background: linear-gradient(145deg, #ffffff, #f8f9fa);
   border-radius: 16px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.07), 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    0 4px 6px rgba(0, 0, 0, 0.07),
+    0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 16px;
   display: flex;
   flex-direction: column;
@@ -1175,7 +1177,9 @@
 /* Hover Effects */
 .skill-card:hover {
   transform: translateY(-6px) scale(1.02);
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1), 0 8px 10px rgba(0, 0, 0, 0.04);
+  box-shadow:
+    0 15px 25px rgba(0, 0, 0, 0.1),
+    0 8px 10px rgba(0, 0, 0, 0.04);
   background: linear-gradient(145deg, #fff, #f0f2f5);
   cursor: pointer;
 }
@@ -1290,7 +1294,9 @@
   padding: 16px;
   border-radius: 16px;
   background: linear-gradient(145deg, #ffffff, #f8f9fa);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.07), 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    0 4px 6px rgba(0, 0, 0, 0.07),
+    0 1px 3px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -2089,7 +2095,9 @@
 
 [data-theme="dark"] .skill-card:hover {
   background: linear-gradient(145deg, var(--neutral-200), var(--neutral-300));
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.3), 0 8px 10px rgba(0, 0, 0, 0.2);
+  box-shadow:
+    0 15px 25px rgba(0, 0, 0, 0.3),
+    0 8px 10px rgba(0, 0, 0, 0.2);
 }
 
 [data-theme="dark"] .project-card {
@@ -2167,13 +2175,10 @@
   font-size: 14px;
   font-weight: 500;
   transition: all 0.3s ease;
+  margin: 2px 18px;
 }
 
-.toggle-theme-btn span:last-child {
-  display: none; /* Hide the text */
-}
-
-.toggle-theme-btn:hover {
+*/ .toggle-theme-btn:hover {
   background-color: var(--neutral-200);
   border-color: var(--primary-400);
   color: var(--primary-600);
@@ -2207,6 +2212,8 @@
 
 /* Smooth transitions for theme switching */
 * {
-  transition: background-color 0.3s ease, color 0.3s ease,
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease,
     border-color 0.3s ease;
 }
